<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_System_Activity.Sign_Up_Activity">

    <TextView
        android:id="@+id/Project_Link"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/version"
        android:textColor="@color/theme_color"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Sign_Up_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="@color/theme_color"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Project_Link"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Sign_Up_Activity_User_Name_ET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_border_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/user_name"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/Sign_Up_TV"
        app:layout_constraintStart_toStartOf="@+id/Sign_Up_TV"
        app:layout_constraintTop_toBottomOf="@+id/Sign_Up_TV"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/Sign_Up_Activity_Email_ET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_border_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/Sign_Up_Activity_User_Name_ET"
        app:layout_constraintStart_toStartOf="@+id/Sign_Up_Activity_User_Name_ET"
        app:layout_constraintTop_toBottomOf="@+id/Sign_Up_Activity_User_Name_ET"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/Sign_Up_Activity_Password_ET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_border_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/Sign_Up_Activity_Email_ET"
        app:layout_constraintStart_toStartOf="@+id/Sign_Up_Activity_Email_ET"
        app:layout_constraintTop_toBottomOf="@+id/Sign_Up_Activity_Email_ET"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/Sign_Up_Activity_Confirm_Password_ET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_border_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/Sign_Up_Activity_Password_ET"
        app:layout_constraintStart_toStartOf="@+id/Sign_Up_Activity_Password_ET"
        app:layout_constraintTop_toBottomOf="@+id/Sign_Up_Activity_Password_ET"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <ProgressBar
        android:id="@+id/Sign_Up_Progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/theme_color"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Sign_Up_Activity_Sign_Up_Button"
        app:layout_constraintEnd_toEndOf="@+id/Sign_Up_Activity_Sign_Up_Button"
        app:layout_constraintStart_toStartOf="@+id/Sign_Up_Activity_Sign_Up_Button"
        app:layout_constraintTop_toBottomOf="@+id/Sign_Up_Activity_Confirm_Password_ET" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Sign_Up_Activity_Sign_Up_Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/theme_button"
        android:elevation="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Sign_Up_Activity_Sign_In_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_in"
            android:textColor="@color/theme_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>