<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forget_Password_Activity">


    <TextView
        android:id="@+id/Project_Link"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/version"
        android:textColor="@color/theme_color"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Forget_Password_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/forget_password"
        android:textColor="@color/theme_color"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Project_Link"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/don_t_worry_we_just_need_your_registered_email_address_and_it_s_done"
        android:textAlignment="center"
        android:textColor="@color/theme_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_Password_TV"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Forget_Password_Activity_Email_ET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_border_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/TextView"
        app:layout_constraintStart_toStartOf="@+id/TextView"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/responseMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/Forget_Password_ProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/Forget_Password_Activity_Email_ET"
        app:layout_constraintStart_toStartOf="@+id/Forget_Password_Activity_Email_ET"
        app:layout_constraintTop_toBottomOf="@+id/Forget_Password_Activity_Email_ET" />

    <ProgressBar
        android:id="@+id/Forget_Password_ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/theme_color"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Forget_Password_Activity_Forget_Password_Button"
        app:layout_constraintEnd_toEndOf="@+id/responseMessage"
        app:layout_constraintStart_toStartOf="@+id/responseMessage"
        app:layout_constraintTop_toBottomOf="@id/responseMessage" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Forget_Password_Activity_Forget_Password_Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/theme_button"
        android:elevation="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Forget_Password_Activity_Go_Back_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Forget_Password_Activity_Go_Back_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppins"
        android:text="&lt; Go Back"
        android:textColor="@color/theme_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>