<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game_Activity.Players_Details_Activity">

    <TextView
        android:id="@+id/Project_Link"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/version"
        android:textColor="@color/theme_color"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Players_Details_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Players Details"
        android:textColor="@color/theme_color"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Project_Link"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Players_Details_Activity_1st_Name_ET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_border_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_1st_player_nick_name"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/Players_Details_TV"
        app:layout_constraintStart_toStartOf="@+id/Players_Details_TV"
        app:layout_constraintTop_toBottomOf="@+id/Players_Details_TV"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/Players_Details_Activity_2nd_Name_ET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_text_border_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_2nd_player_nick_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:textColor="@color/theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/Players_Details_Activity_1st_Name_ET"
        app:layout_constraintStart_toStartOf="@+id/Players_Details_Activity_1st_Name_ET"
        app:layout_constraintTop_toBottomOf="@+id/Players_Details_Activity_1st_Name_ET"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

    <ImageView
        android:id="@+id/Main_Smile_Image_View"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/smile"
        app:layout_constraintEnd_toEndOf="@+id/Players_Details_Activity_2nd_Name_ET"
        app:layout_constraintStart_toStartOf="@+id/Players_Details_Activity_2nd_Name_ET"
        app:layout_constraintTop_toBottomOf="@+id/Players_Details_Activity_2nd_Name_ET"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Main_Activity_HaveGoodDay_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Have a good day friends"
        android:textColor="@color/theme_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Main_Smile_Image_View"
        app:layout_constraintStart_toStartOf="@+id/Main_Smile_Image_View"
        app:layout_constraintTop_toBottomOf="@+id/Main_Smile_Image_View"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Players_Details_Activity_Start_Game_Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/theme_button"
        android:elevation="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/start_game"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>